--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-image-crop-tools",
-  "title": "React Native Image Crop Tools",
-  "version": "1.8.0",
+  "name": "rishi-cropper",
+  "title": "React Native Image Crop Tools Rounded",
+  "version": "1.0.0",
   "description": "Native image crop tools with embeddable UI and on the fly aspect ratio switchin",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
